# fastapi-langgraph-starter-template

./: .dockerignore  .env.example  .gitignore  Dockerfile  HANDOVER.md  LICENSE  PLAN.md  PROBLEMS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 202605140001_create_conversation_message_response_tables.py  202605140002_create_document_tables.py
app/: main.py
app/core/: config.py  errors.py  observability.py
app/db/: session.py
app/middleware/: auth_stub.py  error_handler.py  request_id.py
app/rag/: chunking.py  embeddings.py  qdrant.py  retriever.py
app/repositories/: conversation_repository.py  document_chunk_repository.py  document_repository.py  message_repository.py  response_repository.py
app/services/: document_ingestion_service.py  response_service.py
docs/: architecture.md  evals.md  extending-agents.md  frontend-extensions.md  prompts.md  providers.md
scripts/: export_graphs.py
tests/agents/: test_guardrails.py  test_llm_provider.py  test_orchestrator_graph.py  test_prompt_loader.py  test_rag_agent.py  test_response_formatter.py
tests/api/: test_documents.py  test_health.py  test_response_schemas.py  test_responses.py
tests/core/: test_config.py  test_observability.py
tests/evals/: test_deterministic_checks.py  test_generate_report.py  test_judge_service.py  test_run_dataset.py
tests/middleware/: test_auth_stub.py  test_error_handler.py  test_request_id.py
tests/rag/: test_chunking.py  test_embeddings.py  test_loaders.py  test_retriever.py
tests/scripts/: __init__.py  (+1 more)
(+51 files in other folders)
